OpenRewrite FormatXML, UpgradeToJava17